# CliffordLab

./: README.md  actionlist (1).md
examples/: CliffordLab_Tutorial.ipynb  CliffordLab_arxiv_companion.ipynb  UnifiedCliffordComputations.ipynb  demo_basic.py
experimental/clifford-twins/: .gitignore  README.md  pyproject.toml
experimental/clifford-twins/docs/article/: clifford_nonassociative_twins_v7_folded_triality.tex  clifford_nonassociative_twins_v8_split_bott_triality.tex
experimental/clifford-twins/docs/notes/: math_note.md  prior_work_guardrails.md
experimental/clifford-twins/examples/: cl3_twin_demo.py  folded_triality_demo.py
experimental/clifford-twins/notebooks/: 01_cl3_active_volume_twin.ipynb
experimental/clifford-twins/src/clifford_twins/: __init__.py  basis.py  cl3.py  identities.py  products.py  quaternion.py  triality.py  twisted_cube.py
experimental/clifford-twins/tests/: test_critic_ext.py  test_critic_extra.py  test_products.py  test_quaternion.py  test_triality.py  test_twisted_cube.py
src/: cliffordlab.py  cliffordlab_sym.py
src/cliffordlab_d_regular/cliffordlab/d_regular/: README.md  __init__.py  builders.py  cauchy_kernel.py  hyperbolic.py  pyproject.toml  regularity.py  visualize.py
src/cliffordlab_d_regular/cliffordlab/d_regular/examples/: demo.py
src/cliffordlab_d_regular/cliffordlab/d_regular/tests/: test_basic.py
tests/: test_cr_conditions.py
