[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "clifford-twins"
version = "0.1.0"
description = "Experimental active-volume twin calculus for Cl(3,0), octonions, and folded triality"
authors = [{ name = "Mirco A. Mannucci" }]
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
